change version fetch to use http factory and version lock xz dependency